--- a/index.html
+++ b/index.html
@@ -4,9 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock Paper Scissors</title>
-    <script src="rps.js"></script>
+    <link rel="stylesheet" href="style.css">
+    <script src="rps.js" defer></script>
 </head>
 <body>
-    
+    <div class="hero-wrapper">
+        <div class="hero-container">
+            <p class="title">Rock, Paper, Scissors!</p>
+        </div>
+    </div>
+    <div class ="content">
+        <div class="content-title">
+            <p>First to 5 wins</p>
+                <div class="content-container">
+                    <div class="left-content">
+                        <p>Player Score: 0</p>
+                    </div>
+                    <div class="right-content">
+                        <p>Computer Score: 0</p>
+                    </div>
+                </div>
+        </div>
+
+        <div class="content-buttons">
+            <button id="rock"><img src="img/rock.png">Rock</button>
+            <button id="paper"><img src="img/paper.png">Paper</button>
+            <button id="scissors"><img src="img/scissors.png">Scissors</button>
+        </div>
+    </div>
+
 </body>
 </html>
