--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
             <button id="scissors"><img src="img/scissors.png">Scissors</button>
         </div>
     </div>
-
+    <div class="footer">
+        <p><a href="https://github.com/B-Henslee" target="_blank" rel="noopener noreferrer">@b-henslee</a></p>
+        <p>The Odin Project 2024</p>
+    </div>
 </body>
 </html>
