Create id for scores for score keeping logic

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
             <p>First to 5 wins</p>
                 <div class="content-container">
                     <div class="left-content">
-                        <p>Player Score: 0</p>
+                        <p id="player-score"></p>
                     </div>
                     <div class="right-content">
-                        <p>Computer Score: 0</p>
+                        <p id="computer-score"></p>
                     </div>
                 </div>
         </div>
