Make github logo part of the link

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </div>
     </div>
     <div class="footer">
-        <p><a href="https://github.com/B-Henslee" target="_blank" rel="noopener noreferrer">b-henslee </a><img class="github-logo" src="img/github-mark-yellow.png"></p>
+        <p><a href="https://github.com/B-Henslee" target="_blank" rel="noopener noreferrer">b-henslee <img class="github-logo" src="img/github-mark-yellow.png"></a></p>
         <p>The Odin Project 2024</p>
     </div>
 </body>
